[FIX]: Spacing & Positions

--- a/styles.css
+++ b/styles.css
@@ -134,6 +134,8 @@ body{
 
 .pipe-top{
     position: absolute;
+    top: 0;
+    left: 0;
     width: 20px;
     height: 20px;
     background-image:
@@ -141,6 +143,8 @@ body{
 
 .pipe-top-right{
     position: absolute;
+    top: 0;
+    right: 0;
     width: 20px;
     height: 20px;
     background-image:
@@ -148,6 +152,8 @@ body{
 
 .pipe-bottom{
     position: absolute;
+    bottom: 0;
+    left: 0;
     width: 20px;
     height: 20px;
     background-image:
@@ -155,6 +161,8 @@ body{
 
 .pipe-bottom-right{
     position: absolute;
+    bottom: 0;
+    right: 0;
     width: 20px;
     height: 20px;
     background-image:
